--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Còn Lại</title>
+    <title>Mừng Sinh Nhật Tuổi 17</title>
     <link rel="shortcut icon" href="images/gift.png" type="image/x-icon">
     <link rel="stylesheet" href="style/time.css">
 </head>
