--- a/card.html
+++ b/card.html
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Chào
-                <span id="name">Van Anh</span>
+                <span id="name">Vân Anh</span>
             </h1>
-            <p class="two" id="greetingText">Cảnh báo có một số từ ngữ sẽ cảm thấy lạ và sến súa!</p>
+            <p class="two" id="greetingText">Hãy Coi hết Và Cảm Ơn nhìu <3!</p>
         </div>
 
         <div class="three">
@@ -39,15 +39,15 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Cuộc đời này gặp được ai đó là duyên và tớ đã gặp được cậu đó cũng là phận. Tớ mong rằng, sinh nhật năm nay và sinh nhật của mọi năm tới, mọi điều tốt đẹp nhất, may mắn nhất sẽ đến với cậu nhớ đừng quên tớ nhé!
+                Happy birthday to youu!! Cuộc đời này gặp được ai đó là duyên và tớ đã gặp được Vân Anh đó cũng là phận. Tớ mong rằng, sinh nhật năm nay và sinh nhật của mọi năm tới, mọi điều tốt đẹp nhất, may mắn nhất sẽ đến với Vân Anh!
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">Vì Đây Có Thể Là Lần Cuối.</p>
-            <p class="idea-2">Mà tớ và cậu có thể gặp nhau thường xuyên.</p>
+            <p class="idea-1">Đây có lẽ là năm cuối cùng</p>
+            <p class="idea-2">Trước khi tớ và Vân Anh đi đại học.</p>
             <p class="idea-3">
                 Tớ nhận ra, Tớ muốn làm cái gì đó thật<br>
                 <strong>đặc biệt</strong>
@@ -55,12 +55,12 @@
             </p>
             <p class="idea-4">Bởi vì,</p>
             <p class="idea-5">
-                Cậu rất đặc biệt đối với tớ
+                Đối với tớ, Vân Anh rất đặc biệt
                 <span>:D</span>
             </p>
             <p class="idea-6">
-                <span>Vì</span>
-                <span>Vậy</span>
+                <span>S</span>
+                <span>O</span>
             </p>
         </div>
 
@@ -68,8 +68,8 @@
             <img src="./img/vananh.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Chúc Mừng Sinh Nhật!</h3>
-                <h5 id="wishText">Chúc cho tuổi 17 của cậu tràn đầy hạnh phúc!</h5>
+                <h3 class="wish-hbd">Chúc Mừng Sinh Nhật Vui Vẻ!</h3>
+                <h5 id="wishText">Chúc Vanh vạn sự như ý triệu sự như mơ tỷ sự bất ngờ và ngập tràn may mắn, chúc Vanh mãi đỉnh mãi đỉnhhhhhhhh! :) </h5>
             </div>
         </div>
 
