--- a/card.html
+++ b/card.html
@@ -29,7 +29,7 @@
                 Chào
                 <span id="name">Vân Anh</span>
             </h1>
-            <p class="two" id="greetingText">Hãy Coi hết Và Cảm Ơn nhìu <3!</p>
+            <p class="two" id="greetingText">Hãy Coi hết Và Xin Cảm Ơn Nhìu <3!</p>
         </div>
 
         <div class="three">
