--- a/card.html
+++ b/card.html
@@ -29,7 +29,7 @@
                 Chào
                 <span id="name">Vân Anh</span>
             </h1>
-            <p class="two" id="greetingText">Hãy Coi hết Và Xin Cảm Ơn Nhìu <3!</p>
+            <p class="two" id="greetingText">Tớ mag deinen namen!</p>
         </div>
 
         <div class="three">
@@ -142,8 +142,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>Okay, cảm ơn vì đã coi hết .</p>
+            <p id="replay">Và Chúc Ngủ Ngon</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
